--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,21 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
+            android:name=".SignUpActivity"
+            android:label="Sign up activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".ItemsListActivity"
             android:label="@string/title_items_list"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -27,15 +42,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.beer_app.ItemsListActivity" />
         </activity>
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+
+
+
 
         <meta-data
             android:name="preloaded_fonts"
